# geno-miRNA

./: CMakeLists.txt  Candidate.h  GFFReader.cpp  GFFReader.h  GenomeProcessor.cpp  GenomeProcessor.h  InvalidCharacter.cpp  InvalidCharacter.h  Matrix.h  README  README.md  SeqAlignment.h  StringMatrix.h  algorithm.h  default.json  intervallTree.h  main.cpp  miRNA.cpp  miRNA.h  output.h
